fix: shifted get api functions and formatters
shifted functions to services folder and formatters to utils folder with import updated. Also added the rest of the categories folders in (routes).

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,10 @@ p, li{
   @apply text-xs md:text-sm lg:text-base font-normal uppercase list-none pb-2;
 }
 
+ul li {
+  @apply font-semibold;
+}
+
 a{
   @apply text-xs md:text-sm lg:text-base font-normal uppercase tracking-widest;
 }
